--- a/www/templates/discover.html
+++ b/www/templates/discover.html
@@ -14,7 +14,9 @@
         <h2>{{ currentSong.title }}</h2>
         <p>{{ currentSong.artist }}</p>
       </div>
-
+      <div class="img-lookahead">
+        <img ng-src="{{ nextAlbumImg() }}" />
+      </div>
       <div class="item tabs tabs-secondary tabs-icon-left">
         <a class="tab-item" ng-click="sendFeedback(false)">
           <i class="icon ion-close"></i>
@@ -27,7 +29,6 @@
       </div>
 
     </div>
-
 
   </ion-content>
 </ion-view>
