--- a/www/templates/discover.html
+++ b/www/templates/discover.html
@@ -5,7 +5,7 @@
     <div class="list card current-song">
 
       <div class="item item-image">
-        <iframe src="{{ currentAnime.video }}" frameborder="0" allowfullscreen></iframe>
+        <iframe frameborder="0" src="{{ currentAnime.video }}" height="200" width="100%" allowfullscreen></iframe>
       </div>
 
       <div class="item">
@@ -25,7 +25,6 @@
       </div>
 
     </div>
-
 
   </ion-content>
 </ion-view>
