--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,13 +7,13 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Discover Tab -->
-  <ion-tab title="Discover" icon-off="ion-radio-waves" icon-on="ion-radio-waves" href="#/tab/discover">
+  <ion-tab title="Discover" icon-off="ion-monitor" icon-on="ion-monitor" href="#/tab/discover">
     <ion-nav-view name="tab-discover"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Favorites Tab -->
-  <ion-tab title="Favorites" icon-off="ion-music-note" icon-on="ion-music-note" href="#/tab/favorites">
+  <ion-tab title="Favorites" icon-off="ion-videocamera" icon-on="ion-videocamera"  href="#/tab/favorites">
     <ion-nav-view name="tab-favorites"></ion-nav-view>
   </ion-tab>
 
